apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
//apply plugin: 'com.mikepenz.aboutlibraries.plugin'

android {
    compileSdkVersion 30

    lintOptions {
        abortOnError false
    }

    android {
        packagingOptions {
            exclude 'META-INF/DEPENDENCIES'
            exclude 'META-INF/LICENSE.md'
            exclude 'META-INF/LICENSE'
            exclude 'META-INF/NOTICE.markdown'
            exclude 'META-INF/NOTICE.md'
            exclude 'META-INF/LICENSE.txt'
            exclude 'META-INF/license.txt'
            exclude 'META-INF/NOTICE'
            exclude 'META-INF/NOTICE.txt'
            exclude 'META-INF/notice.txt'
            exclude 'META-INF/ASL2.0'
            exclude("META-INF/*.kotlin_module")
        }
    }

    defaultConfig {
        applicationId "com.seanmiller.alpacadashboard"
        minSdkVersion 26
        targetSdkVersion 30
        versionCode 5

        versionName "1.3"
        android.defaultConfig.manifestPlaceholders = [
                'appAuthRedirectScheme': 'alpacadashboard'
        ]

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {

    implementation 'com.anjlab.android.iab.v3:library:1.0.44'

//    implementation platform('com.google.firebase:firebase-bom:25.12.0')
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.2.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
    implementation 'androidx.navigation:navigation-fragment:2.3.0'
    implementation 'androidx.navigation:navigation-ui:2.3.0'
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
//    implementation 'com.google.firebase:firebase-database:19.3.0'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    implementation project(path: ':alpaca-java')
//    implementation "net.jacobpeterson:alpaca-java:6.0.1"
    implementation 'io.cabriole:decorator:1.2.0'
    implementation 'com.robinhood.ticker:ticker:2.0.2'
    implementation 'com.google.android.material:material:1.3.0-alpha03'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
    implementation 'com.robinhood.spark:spark:1.2.0'
    implementation "androidx.gridlayout:gridlayout:1.0.0"
    implementation 'com.getbase:floatingactionbutton:1.10.1'
    implementation 'com.allattentionhere:fabulousfilter:0.0.5'
    implementation 'com.lapism:search:2.3.0@aar'
    implementation "androidx.viewpager2:viewpager2:1.0.0"
//    implementation 'com.google.firebase:firebase-analytics'
    implementation 'com.google.android:flexbox:2.0.1'
    implementation 'net.openid:appauth:0.7.1'
    implementation "com.squareup.okhttp3:okhttp:4.9.0"
    implementation "com.mashape.unirest:unirest-java:1.4.8"
    implementation "com.google.guava:guava:30.0-jre"
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation "com.mikepenz:aboutlibraries:8.4.3"
    implementation 'com.ramotion.foldingcell:folding-cell:1.2.3'
    implementation "androidx.browser:browser:1.2.0"
    implementation 'com.klinkerapps:article_viewer:0.26.0'
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    // Skip this if you don't want to use integration libraries or configure Glide.
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    implementation 'com.github.medyo:android-about-page:1.3.1'

//required support lib modules
//    implementation "androidx.cardview:cardview:2.3.0"
    implementation "com.mikepenz:aboutlibraries-core:8.4.3"
}